# nvml-control

./: .clang-format  CMakeLists.txt
include/nvml_control/: allocator.hpp  instance.hpp
src/: base_allocator.cpp  error.hpp  instance.cpp  isolated_GI_allocator.cpp  shared_GI_allocator.cpp
test/: CMakeLists.txt  multiset_sum.hpp  test_allocator.cpp  test_instance.cpp
